改进：重构数据管理模块，优化数据库表加载速度；
改进：数据源底层添加连接池支持，提升系统数据操作性能；
改进：JDK最低版本依赖由1.6升级至1.8；

-----------------------------------------
--v1.8.0
-----------------------------------------

新增：图表新增表格图、树图、旭日图、桑基图、关系图、词云图，总计已支持41种图表；
新增：新增参数化数据集功能，用于支持交互式图表；
新增：图表编辑界面新增数据集别名设置功能，用于灵活定义其展示名称；
新增：图表展示界面新增[设置]功能按钮，用于交互设置参数化数据集；
新增：数据集编辑界面新增导出数据功能；
修复：修复数据源编辑界面在选定驱动程序后点击"测试连接"后报错的BUG；
修复：修复添加数据源界面在没有任何输入时点击"测试连接"按钮导致其被禁用的BUG；
改进：数据导出界面的导出SQL文本框改为文本域，解决无法输入较长或带换行符的SQL语句问题；
改进：改进数据源表/视图识别逻辑，解决某些数据源无法显示表/视图的问题；
改进：改进数据源添加界面的URL设置帮助功能，添加更多数据库设置帮助；
改进：图表/看板展示界面移除已废弃的chartUtil、dashboardRenderer内置JS库；
改进：图表支持库Echarts升级至4.7.0版本；


-----------------------------------------
--v1.8.1
-----------------------------------------

新增：看板展示页面新增异步加载图表API；
新增：图表、看板展示页面新增参数传入支持；
修复：修复导入数据功能报“readonly connection”的BUG；
修复：修复某些功能查询列表在用户没有设置昵称时创建用户列显示为空的BUG；
改进：看板页面图表插件改为从单独的chartPluginManager.js内引入；
改进：数据集、图表、看板查询列表的可搜索列加粗显示；
改进：改进新版本检测策略，改为每12小时检测一次，避免每次刷新主页都检测；


-----------------------------------------
--v1.9.0
-----------------------------------------

新增：看板页面图表元素支持添加"dg-chart-link"属性，用于设置图表联动功能；
新增：看板页面body元素、图表元素支持添加"dg-chart-auto-resize"属性，用于设置图表自动调整大小功能；
新增：看板页面图表元素支持添加"dg-chart-theme"属性，用于自定义单个图表主题；
新增：看板页面body元素、图表元素支持添加"dg-chart-disable-setting"属性，用于禁用图表交互设置功能；
新增：看板页面图表元素支持添加"dg-chart-on-*"属性，用于定义图表事件处理逻辑；
新增：看板页面body元素、图表元素支持添加"dg-chart-listener"属性，用于定义图表监听器；
新增：看板页面看板监听器结构新增render、renderChart、updateChart后置回调函数；
新增：基本地图、散点值地图、关系地图新增地图名数据标记，用于支持地图随数据一起刷新的场景；
新增：表格图表、标签图表新增图表设置项，用于自定义图表样式；
修复：修复某些图表在添加了多数据集后渲染报错的BUG；
修复：修复基本地图图表在某些情况下未正确映射数值颜色的BUG；
修复：修复折线图、柱状图、散点图刷新数据时类目轴没有同步更新的BUG；
改进：图表编辑页面显示数据标记名，用于为图表事件数据结构标识提供参考；
改进：重构看板JS对象、图表JS对象的API，用于支持个性化扩展看板；
改进：简化图表主题结构，移除axisColor、axisScaleLineColor属性，添加actualBackgroundColor属性；
改进：数据集预览查询结果中存在不支持的数据类型时给出友好的提示；
改进：看板页面window.chartSupport迁移至window.chartFactory.chartSupport，前者将在未来版本移除；
改进：看板页面window.chartPluginManager迁移至window.chartFactory.chartPluginManager，前者将在未来版本移除；
改进：看板页面window.chartForm迁移至window.chartFactory.chartForm，前者将在未来版本移除；